fix footer on mobile view

--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -96,6 +96,5 @@ a:hover {
 }
 
 .footer {
-  margin-top: 4rem;
   background: url("/assets/footer.svg") no-repeat center top;
 }
